<resources>
    <string name="app_name">助宝</string>
    <string name="carat">克拉</string>
    <string name="shape">形状</string>
    <string name="color">颜色</string>
    <string name="intensity">强度</string>
    <string name="gloss">光彩</string>
    <string name="clarity">净度</string>
    <string name="threeEx">三项</string>
    <string name="cut">切工</string>
    <string name="polish">抛光</string>
    <string name="symmetry">对称</string>
    <string name="fluore">荧光</string>
    <string name="rapoetNo">证书编号</string>
    <string name="stoneId">货号</string>
    <string name="report">证书</string>
    <string name="onlineprice">国际报价</string>
    <string name="back">退点</string>
    <string name="zbBack">推荐退点</string>
    <string name="rate">汇率</string>
    <string name="rmbPerCt">RMB/Ct</string>
    <string name="rmbprice">RMB/粒</string>
    <string name="dollorprice">USD/粒</string>
    <string name="dollorperCt">USD/Ct</string>
    <string name="presell_add_back">预售加点</string>
    <string name="presell_back">预售退点</string>
    <string name="userInfo">个人信息</string>
    <string name="accountNumber">账号:</string>
    <string name="companyName">公司名称:</string>
    <string name="userName">联系人:</string>
    <string name="companyAddr">公司地址:</string>
    <string name="offer">报价</string>
    <string name="rapCt">$/Ct</string>
    <string name="rapBack">%/Rap</string>
    <string name="priceTotal">$Total</string>
    <string name="availability">可用性</string>
    <string name="lotLocation">区域位置</string>
    <string name="table">台面比</string>
    <string name="measurements">尺寸</string>
    <string name="culet">尖底</string>
    <string name="girdle">腰围</string>
    <string name="crown">顶点</string>
    <string name="pavilion">展位</string>
    <string name="starLength">星面长度</string>
    <string name="proportion">比例</string>
    <string name="reportComments">认证评论</string>
    <string name="keyToSymbols">主要特征</string>
    <string name="inscription">腰码</string>
    <string name="lotId">Lot#</string>
    <string name="updated">更新时间</string>
    <string name="rapId">RapID/简称</string>
    <string name="rapCode">公司名称</string>
    <string name="rapName">姓名</string>
    <string name="telephone">电话</string>
    <string name="fax">传真</string>
    <string name="location">商家位置</string>
    <string name="rateMember">评分</string>
    <string name="brand">品牌</string>
    <string name="shade">shade</string>
    <string name="labLocation">labLocation</string>
    <string name="inclusions">inclusions</string>
    <string name="memberComment">会员评论</string>
    <string name="supstoneid">原货号</string>
    <string name="percentage">倍率</string>
    <string name="presaleback">原退点</string>
    <string name="image_index">%1$s/%2$s</string>
    
    <string name="commodity">商品</string>
    <string name="buy">买入</string>
    <string name="toSell">卖出</string>
    <string name="highLow">高/低</string>
    <string name="gold_remind">声明:以上行情数据由融通金提供,每10秒更新，仅供参考！</string>
    
    <string name="usdRate">美元汇率</string>
    <string name="diamondAdd">白钻加点</string>
    <string name="add">加</string>
    <string name="less">减</string>
    <string name="colorDrillRate">彩钻倍率</string>
    <string name="setUp">设置</string>


    <string name="basicInf">基本信息</string>
    <string name="date">颁发日期</string>
    <string name="GiaDiamondReport">GIA钻石分级证书</string>
    <string name="caratWeight">重量</string>
    <string name="origin">来源</string>
    <string name="grade">等级</string>
    <string name="distribution">分布</string>
    <string name="depth">全深比</string>
    <string name="crownAngle">冠角</string>
    <string name="crownHeight">冠高比</string>
    <string name="pavilionAngle">亭角</string>
    <string name="pavilionDepth">亭深比</string>
    <string name="lowerHalf">腰下刻面</string>
    <string name="clarityCharacteristics">净度特征</string>
    <string name="comments">备注</string>
    <string name="IgiDiamondReport">IGI钻石分级证书</string>
    <string name="reportCityDate">报告地及日期</string>
    <string name="description">描述</string>
    <string name="girdleThickness">腰厚</string>

    <string name="round">圆形</string>
    <string name="shaped">异形</string>
    <string name="weight">重量(ct)</string>
    <string name="intlPrice">国际报价</string>
    <string name="discount">折扣(%)</string>
    <string name="retreat">退点(%)</string>
    <string name="usd">美元</string>
    <string name="rmb">人民币</string>
    <string name="delete">删除</string>
    
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="login">登录</string>
    <string name="register">新用户注册</string>
    <string name="retrievePassword">找回密码?</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
</resources>
    