<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

<com.zhubaokeji.library.TitleBar
        android:id="@+id/gold_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.zhubaokeji.android.fragment.StatusLayoutFragment
        android:id="@+id/status_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_50"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/commodity"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/buy" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/toSell"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/highLow"/>
    </LinearLayout>

    <com.zhubaokeji.android.biz.PullableScrollablePanel
        android:id="@+id/recycler_gold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/sp_12"
        android:gravity="center"
        android:textColor="@color/orange_500"
        android:text="@string/gold_remind"/>
        </LinearLayout>
    </com.zhubaokeji.android.fragment.StatusLayoutFragment>
</LinearLayout>