<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <com.zhubaokeji.library.TitleBar
        android:id="@+id/basicSettings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="#fff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/usdRate"/>
        <com.zhubaokeji.android.utils.XEditText
            android:id="@+id/setting_rate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:background="@null"
            android:inputType="number"
            android:digits="1234567890."
            android:maxLength="10"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="#fff"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diamondAdd"
            android:layout_margin="10dp"
            android:layout_alignTop="@+id/setting_DiscountPoint"
            android:layout_centerVertical="true" />

        <EditText
            android:id="@+id/setting_DiscountPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/textView"
            android:background="@null"
            android:digits="1234567890."
            android:inputType="number"
            android:maxLength="10"
            android:paddingLeft="5dp" />

        <Button
            android:id="@+id/setting_add"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/setting_subtract"
            android:background="@drawable/btn_round"
            android:text="@string/add" />

        <Button
            android:id="@+id/setting_subtract"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/btn_round"
            android:text="@string/less" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#fff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/colorDrillRate"/>
        <com.zhubaokeji.android.utils.XEditText
            android:id="@+id/setting_percentage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="5dp"
            android:background="@null"
            android:inputType="number"
            android:digits="1234567890."
            android:maxLength="20"/>
    </LinearLayout>
    <Button
        android:id="@+id/setting_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/btn_round"
        android:text="@string/setUp"/>
</LinearLayout>