<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="colorDetails" type="com.zhubaokeji.android.bean.ZhubaoColorResponse"/>
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">
    <com.zhubaokeji.library.TitleBar
        android:id="@+id/zhubao_color_details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/zhubao_color_details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:padding="6dp"
            android:background="#FFFFFF">

            <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp">
            <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/shape"
            />
            <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@{colorDetails.shape}"/>

            </LinearLayout>

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/carat"/>

            <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/zb_color_carat"
            android:text="@{colorDetails.carat}"/>

            </LinearLayout>

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/color"/>

            <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@{colorDetails.color}"/>

            </LinearLayout>

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/clarity"/>

            <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@{colorDetails.clarity}"/>
            </LinearLayout>
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/polish"/>

            <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@{colorDetails.polish}"/>

            </LinearLayout>
            </LinearLayout>

            <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/symmetry"/>

            <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@{colorDetails.symmetry}"/>

            </LinearLayout>

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/fluore"/>

            <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@{colorDetails.fluorescence}"/>

            </LinearLayout>

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/rapoetNo"/>

            <TextView
            android:id="@+id/color_details_reportNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/blue_500"
            android:text="@{colorDetails.reportno}"/>

            </LinearLayout>

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/report"/>

            <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@{colorDetails.report}"/>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/measurements"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_11"
                        android:text="@{colorDetails.measurement}"/>

                </LinearLayout>
            </LinearLayout>
            </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
            android:gravity="center"
            android:text="成本信息"/>
            </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:padding="6dp"
            android:background="#FFFFFF">

            <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/carat"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:text="@{colorDetails.carat}"/>

            </LinearLayout>

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/supstoneid"/>

            <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@{colorDetails.supstoneid}"/>

            </LinearLayout>
            </LinearLayout>

            <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/dollorprice"/>

            <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@{colorDetails.dollorprice}"/>
            </LinearLayout>

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/dollorperCt"/>

            <TextView
             android:id="@+id/saledollorCt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@{colorDetails.saledollorctprice}"/>
            </LinearLayout>
            </LinearLayout>
            </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:gravity="center"
                android:text="报价信息"/>
            </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:padding="6dp"
            android:background="#FFFFFF">

            <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="3dp"
            android:layout_margin="5dp">
            <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="@string/percentage"/>
            <EditText
            android:id="@+id/zb_color_percentage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edittext"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:inputType="number"
            android:maxLength="5"
            android:padding="5dp"
            android:gravity="center"
            android:digits="1234567890."
            android:text="3"
            android:textSize="15sp">
            </EditText>
            </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="3dp"
            android:layout_margin="5dp">
            <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
                android:gravity="center|left"
            android:text="@string/rate"/>
            <EditText
            android:id="@+id/zb_color_rate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edittext"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:inputType="number"
            android:maxLength="5"
            android:padding="5dp"
            android:gravity="center"
            android:digits="1234567890."
            android:text="3"
            android:textSize="15sp">
            </EditText>
            </LinearLayout>
            </LinearLayout>

            <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="3dp"
            android:layout_margin="5dp">

            <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
                android:padding="5dp"
            android:text="@string/rmbprice"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/zb_color_rmbprice" />
            </LinearLayout>
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="4dp"
            android:layout_margin="5dp">

            <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center|left"
                android:padding="5dp"
            android:text="@string/rmbPerCt"/>

            <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/zb_color_rmbPerCt" />

            </LinearLayout>
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_margin="5dp">
            <TextView
            android:id="@+id/zb_color_offer"
            android:layout_width="90dp"
            android:gravity="center"
            android:layout_height="30dp"
            android:background="@color/red_500"
            android:text="@string/offer"/>
            </LinearLayout>
            </LinearLayout>
            </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    </layout>